# ReBuddy

./: .gitignore  README.md  check_pdf_parser.py  main_fastapi.py  pyproject.toml
app/: __init__.py  config.py  extensions.py
app/api/: __init__.py  chat_routes.py  conversation_routes.py  file_routes.py  knowledge_routes.py  paper_routes.py  system_routes.py  user_routes.py
app/core/: conversation_manager.py  file_manager.py  kb_manager.py  llm_client.py  pdf_parser.py  ppt_generator.py  searcher.py  user_context.py
app/core/prompts/: papers_extract.py  prompt_templates.py
app/core/tools/: README.md  __init__.py  knowledge_base_search_tool.py  text_inspector_tool.py
app/models/: entities.py  schemas.py
app/services/: background_tasks.py  chat_service.py  conversation_service.py  file_service.py  generation_service.py  knowledgebase_service.py  paper_service.py  search_service.py  user_service.py
examples/open_deep_research/: README.md  run_gaia.py  test.py
examples/open_deep_research/scripts/: visual_qa.py
frontend/: index.html  login.html
frontend/scripts/: main.js
frontend/scripts/modules/: chat.js  conversation-manager.js  fileManager.js  gemini-scroll.js  knowledgeBase.js  pdfViewer.js  recommendation.js  sidebar.js
frontend/scripts/services/: api.js
frontend/scripts/utils/: helpers.js  renderer.js
frontend/styles/: base.css  main.css
frontend/styles/modules/: chat.css  file-manager.css  knowledge-base.css  papers.css  pdf-viewer.css  sidebar.css
src/smolagents/: agents.py  models.py
tools/: agent_tool_manager.py  text_web_browser.py
(+16 files in other folders)
